force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Received_Date__c</fullName>
    <description>The date that the creditor’s package was received.</description>
    <formula>Insolvency__r.Insolvency_Received_Date__c</formula>
    <inlineHelpText>The date that the creditor’s package was received.</inlineHelpText>
    <label>Insolvency Received Date</label>
    <type>Date</type>
</CustomField>