force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Status__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Status__c</fullName>
    <description>This status represents the current point in the processing workflow for this account.</description>
    <inlineHelpText>This status represents the current point in the processing workflow for this account.</inlineHelpText>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Recall Requested</fullName>
            </value>
            <value>
                <fullName>Annulled</fullName>
            </value>
            <value>
                <fullName>Annulled - Filed New</fullName>
            </value>
            <value>
                <fullName>BOT Mismatch</fullName>
            </value>
            <value>
                <fullName>BOT Review</fullName>
            </value>
            <value>
                <fullName>BOT Review completed</fullName>
            </value>
            <value>
                <fullName>Claim Filed</fullName>
            </value>
            <value>
                <fullName>Claim Omitted</fullName>
            </value>
            <value>
                <fullName>Claim Withdrawn</fullName>
            </value>
            <value>
                <fullName>Debtor Paying Direct</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
            <value>
                <fullName>Extinguished</fullName>
            </value>
            <value>
                <fullName>For Owner Review</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>No PoC Required</fullName>
            </value>
            <value>
                <fullName>Pending Assignment to Collection Agency</fullName>
            </value>
            <value>
                <fullName>PoC Details Provided</fullName>
            </value>
            <value>
                <fullName>PoC Package Generated</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Refused – Filed New</fullName>
            </value>
            <value>
                <fullName>Sent to Collections</fullName>
            </value>
            <value>
                <fullName>Trustee Followup</fullName>
            </value>
            <value>
                <fullName>Wait / Hold</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Withdrawn – Filed New</fullName>
            </value>
            <value>
                <fullName>Withdraw PoC</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>Sent on File</fullName>
            </value>
            <value>
                <fullName>Claim Established</fullName>
                <isActive>false</isActive>
                <label>Claim Established</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>