force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Status_Formula__c</fullName>
    <description>Insolvency Status</description>
    <formula>TEXT( Insolvency__r.Insolvency_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insolvency Status</inlineHelpText>
    <label>Insolvency Status</label>
    <type>Text</type>
</CustomField>