force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Status_Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Status_Last_Changed__c</fullName>
    <description>The date and time of the most recent insolvency status change.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date and time of the most recent insolvency status change.</inlineHelpText>
    <label>Processing Status Last Changed</label>
    <type>DateTime</type>
</CustomField>