force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Sub_Status__c</fullName>
    <inlineHelpText>Field updated when Processing status changed to Discharged or Annulled or Refused or Withdrawn or Active or For Owner Review or revival date changed</inlineHelpText>
    <label>Processing Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending File</fullName>
            </value>
            <value>
                <fullName>File Error Parsing Record</fullName>
            </value>
            <value>
                <fullName>Sent on file</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>Stat-barred Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>