force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Type__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Type__c</fullName>
    <description>The type of insolvency filing the debtor(s) have made.</description>
    <inlineHelpText>The type of insolvency filing the debtor(s) have made.</inlineHelpText>
    <label>Insolvency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Consumer Proposal</fullName>
            </value>
            <value>
                <fullName>Division 1 Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>