force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Type_Formula__c</fullName>
    <description>Insolvency Type</description>
    <formula>Text(Insolvency__r.Insolvency_Type__c)</formula>
    <inlineHelpText>Insolvency Type</inlineHelpText>
    <label>Insolvency Type Formula</label>
    <type>Text</type>
</CustomField>