force-app/main/default/objects/Insolvency_Account__c/fields/Investment_Group__c.field-meta.xml
<CustomField>
    <fullName>Investment_Group__c</fullName>
    <description>The investment group this account is funded through.</description>
    <inlineHelpText>The investment group this account is funded through.</inlineHelpText>
    <label>Investment Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFSCARDS</fullName>
            </value>
            <value>
                <fullName>AutoCapita</fullName>
            </value>
            <value>
                <fullName>BFS Dist</fullName>
            </value>
            <value>
                <fullName>BMODistFF</fullName>
            </value>
            <value>
                <fullName>BNS 1 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>BNS 1 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 2 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>BNS 2 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 3 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 4 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 5 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>BNS 5 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 6 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>BNS 6 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 7 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>BNS 7 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS CCS</fullName>
            </value>
            <value>
                <fullName>BNS CCS 1</fullName>
            </value>
            <value>
                <fullName>BNS CCS 2</fullName>
            </value>
            <value>
                <fullName>BNSDFFAU21</fullName>
            </value>
            <value>
                <fullName>BNSDFFCC21</fullName>
            </value>
            <value>
                <fullName>BNSDFFCL21</fullName>
            </value>
            <value>
                <fullName>BNSDFFPL21</fullName>
            </value>
            <value>
                <fullName>BNS DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>BNS INSOLVENT FF</fullName>
            </value>
            <value>
                <fullName>CBVPDistBul</fullName>
            </value>
            <value>
                <fullName>CUETS94</fullName>
            </value>
            <value>
                <fullName>CUETS DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>CUETS INSOLVENT FF</fullName>
            </value>
            <value>
                <fullName>EFDisFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>