force-app/main/default/objects/Insolvency_Account__c/fields/Investment_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Investment_Group_Name__c</fullName>
    <description>Investment Group Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Investment Group Name</inlineHelpText>
    <label>Investment Group Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>