force-app/main/default/objects/Insolvency_Account__c/fields/Is_Duplicate_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicate Resolved?</label>
    <type>Checkbox</type>
</CustomField>