force-app/main/default/objects/Insolvency_Account__c/fields/Last_Modify_User_Alias__c.field-meta.xml
<CustomField>
    <fullName>Last_Modify_User_Alias__c</fullName>
    <formula>LastModifiedBy.Alias</formula>
    <label>Last Modify User Alias</label>
    <type>Text</type>
</CustomField>