force-app/main/default/objects/Insolvency_Account__c/fields/Last_Payment_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Amount_3__c</fullName>
    <description>The Third Last Payment amount for this account</description>
    <inlineHelpText>The Third Last Payment amount for this account</inlineHelpText>
    <label>Third Last Payment amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>