force-app/main/default/objects/Insolvency_Account__c/fields/Last_Payment_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date_2__c</fullName>
    <description>The last payment date (2) for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last payment date (2) for this account.</inlineHelpText>
    <label>Last Payment Date (2)</label>
    <type>Date</type>
</CustomField>