force-app/main/default/objects/Insolvency_Account__c/fields/Last_Payment_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date_3__c</fullName>
    <description>The Third Last Payment date for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Third Last Payment date for this account.</inlineHelpText>
    <label>Third Last Payment date</label>
    <type>Date</type>
</CustomField>