force-app/main/default/objects/Insolvency_Account__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>The last payment date for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last payment date for this account.</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>