force-app/main/default/objects/Insolvency_Account__c/fields/Last_Statement_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Amount_3__c</fullName>
    <description>The amount owning on the last statement sent (3) for this account.</description>
    <inlineHelpText>The amount owning on the last statement sent (3) for this account.</inlineHelpText>
    <label>Last Statement Amount (3)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>