force-app/main/default/objects/Insolvency_Account__c/fields/Last_Statement_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Date_3__c</fullName>
    <description>The date the last statement was sent (3) for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the last statement was sent (3) for this account.</inlineHelpText>
    <label>Last Statement Date (3)</label>
    <type>Date</type>
</CustomField>