force-app/main/default/objects/Insolvency_Account__c/fields/LastModifiedBy_Alias_Name__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBy_Alias_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LastModifiedBy Alias Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>