force-app/main/default/objects/Insolvency_Account__c/fields/Latest_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Payment_Date__c</fullName>
    <label>Latest Payment Date</label>
    <summarizedField>Insolvency_Payment__c.Payment_Posting_Date__c</summarizedField>
    <summaryForeignKey>Insolvency_Payment__c.Insolvency_Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>