force-app/main/default/objects/Insolvency_Account__c/fields/Legal_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Product_Type__c</fullName>
    <description>This is the legal name of the product for use when being sent to distressed</description>
    <formula>IF(
   ISPICKVAL(Account_Type__c, &quot;Core Walmart Rewards Mastercard&quot;), 
   &quot;Walmart Mastercard&quot;, 
   TEXT(Account_Type__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the legal name of the product for use when being sent to distressed</inlineHelpText>
    <label>Legal Product Type</label>
    <type>Text</type>
</CustomField>