force-app/main/default/objects/Insolvency_Account__c/fields/Liability_Id__c.field-meta.xml
<CustomField>
    <fullName>Liability_Id__c</fullName>
    <description>Liability id from Creditor package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Liability id from Creditor package</inlineHelpText>
    <label>Liability Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>