force-app/main/default/objects/Insolvency_Account__c/fields/Line_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Credit__c</fullName>
    <description>Line of Credit</description>
    <inlineHelpText>Line of Credit</inlineHelpText>
    <label>Line of Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>