force-app/main/default/objects/Insolvency_Account__c/fields/LoR_Notice_1_FollowUp_Date__c.field-meta.xml
<CustomField>
    <fullName>LoR_Notice_1_FollowUp_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LoR Notice 1 FollowUp Date</label>
    <type>Date</type>
</CustomField>