force-app/main/default/objects/Insolvency_Account__c/fields/LoR_Notice_1_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>LoR_Notice_1_Sent_Date__c</fullName>
    <description>The date that the notice 1 for letter of release was sent to trustee</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the notice 1 for letter of release was sent to trustee</inlineHelpText>
    <label>LOR Demand Sent Date</label>
    <type>Date</type>
</CustomField>