force-app/main/default/objects/Insolvency_Account__c/fields/Missing_div_follow_up_completed_date__c.field-meta.xml
<CustomField>
    <fullName>Missing_div_follow_up_completed_date__c</fullName>
    <description>Date follow up was completed on dividends listed in R&amp;D no received.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date follow up was completed on dividends listed in R&amp;D no received</inlineHelpText>
    <label>Missing div. follow-up completed date</label>
    <type>Date</type>
</CustomField>