force-app/main/default/objects/Insolvency_Account__c/fields/Missing_Payment_Follow_up_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Missing_Payment_Follow_up_Sent_Date__c</fullName>
    <description>Date when missing payment follow up reminder was sent to trustee</description>
    <formula>Insolvency__r.Missing_payment_Follow_Up_Sent_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date when missing payment follow up reminder was sent to trustee</inlineHelpText>
    <label>Missing Payment Follow up Sent Date</label>
    <type>DateTime</type>
</CustomField>