force-app/main/default/objects/Insolvency_Account__c/fields/Missing_Payment_followup_completed__c.field-meta.xml
<CustomField>
    <fullName>Missing_Payment_followup_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Payment followup completed</label>
    <type>Checkbox</type>
</CustomField>