force-app/main/default/objects/Insolvency_Account__c/fields/Name_Matches__c.field-meta.xml
<CustomField>
    <fullName>Name_Matches__c</fullName>
    <description>Name Matches</description>
    <formula>IF(SUBSTITUTE( Name , &apos; &apos;, &apos;&apos;) = Account_Number_Without_Space__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name Matches</inlineHelpText>
    <label>Name Matches</label>
    <type>Checkbox</type>
</CustomField>