force-app/main/default/objects/Insolvency_Account__c/fields/New_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Offer_Amount__c</fullName>
    <description>New Offer Amount</description>
    <inlineHelpText>New Offer Amount</inlineHelpText>
    <label>New Offer Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>