force-app/main/default/objects/Insolvency_Account__c/fields/New_Offer_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>New_Offer_Amount_Formula__c</fullName>
    <formula>Insolvency__r.New_Offer_Amount__c * Percentage_Of_Unsecured_Debt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Offer Amount</inlineHelpText>
    <label>New Offer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>