force-app/main/default/objects/Insolvency_Account__c/fields/No_Match_Debtor__c.field-meta.xml
<CustomField>
    <fullName>No_Match_Debtor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be checked when CTB is unable to find this Debtor on their end</description>
    <inlineHelpText>Will be checked when CTB is unable to find this Debtor on their end</inlineHelpText>
    <label>Debtor No Match</label>
    <type>Checkbox</type>
</CustomField>