force-app/main/default/objects/Insolvency_Account__c/fields/No_PoC_Required_Date__c.field-meta.xml
<CustomField>
    <fullName>No_PoC_Required_Date__c</fullName>
    <description>Date on which Insolvency Account marked as no PoC Required</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date on which Insolvency Account marked as no PoC Required</inlineHelpText>
    <label>No PoC Required Date</label>
    <type>DateTime</type>
</CustomField>