force-app/main/default/objects/Insolvency_Account__c/fields/No_PoC_Required_Set_By__c.field-meta.xml
<CustomField>
    <fullName>No_PoC_Required_Set_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>No PoC Required Set By</description>
    <inlineHelpText>No PoC Required Set By</inlineHelpText>
    <label>No PoC Required Set By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insolvency_Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>