force-app/main/default/objects/Insolvency_Account__c/fields/Notice_of_Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Insolvency__c</fullName>
    <description>Notice of Insolvency(SLA step 2)</description>
    <formula>(5 * ( FLOOR( ( DATEVALUE(Sent_For_Owner_Review_Date_Original__c) - DATE( 1900, 1, 8) ) / 7 ) )
+
MIN( 5, MOD( DATEVALUE(Sent_For_Owner_Review_Date_Original__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Insolvency_Created_Date__c - DATE( 1900, 1, 8) ) / 7))
+
MIN( 5, MOD( Insolvency_Created_Date__c - DATE( 1900, 1, 8), 7 ) ) )
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2021-01-01&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2021-01-01&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-05-23&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-05-23&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-06-24&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-06-24&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-07-01&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-07-01&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-08-01&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-08-01&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-09-05&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-09-05&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-09-30&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-09-30&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-10-10&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-10-10&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-11-11&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-11-11&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-12-26&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-12-26&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2022-12-27&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2022-12-27&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-01-02&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-01-02&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-02-20&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-02-20&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-04-07&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-04-07&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-04-10&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-04-10&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-05-22&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-05-22&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-07-03&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-07-03&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-08-07&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-08-07&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-09-04&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-09-04&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-10-02&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-10-02&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-10-09&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-10-09&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-11-13&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-11-13&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-12-25&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-12-25&quot;)),1,0)
-
IF(AND(Insolvency_Created_Date__c &lt; DATEVALUE(&quot;2023-12-26&quot;),
DATEVALUE(Sent_For_Owner_Review_Date_Original__c) &gt; DATEVALUE(&quot;2023-12-26&quot;)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Notice of Insolvency(SLA step 2)</inlineHelpText>
    <label>SLA - Notice of Insolvency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>