force-app/main/default/objects/Insolvency_Account__c/fields/Number_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Agreement__c</fullName>
    <description>Number of open agreements the customer has with Easyhome</description>
    <inlineHelpText>Number of open agreements the customer has with Easyhome</inlineHelpText>
    <label>Number of Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>