force-app/main/default/objects/Insolvency_Account__c/fields/Number_of_Days_Close_to_Voting_Date__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Close_to_Voting_Date__c</fullName>
    <description>Number of Days Close to Voting Date</description>
    <formula>IF((Insolvency_Date__c + 45) &gt;=  TODAY(), (Insolvency_Date__c + 45) - TODAY() , null)</formula>
    <inlineHelpText>Number of Days Close to Voting Date</inlineHelpText>
    <label>Number of Days Close to Voting Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>