force-app/main/default/objects/Insolvency_Account__c/fields/Number_Of_Days_In_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_In_Current_Status__c</fullName>
    <description>Number of Business Days in Current Status</description>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) )
+
MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( (DATEVALUE(Insolvency_Status_Last_Changed__c) - DATE( 1900, 1, 8) ) / 7))
+
MIN( 5, MOD( (DATEVALUE(Insolvency_Status_Last_Changed__c) - DATE( 1900, 1, 8)), 7 ) ) )
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-02-21&quot;),
today() &gt; DATEVALUE(&quot;2022-02-21&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-04-15&quot;),
today() &gt; DATEVALUE(&quot;2022-04-15&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-05-23&quot;),
today() &gt; DATEVALUE(&quot;2022-05-23&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-06-24&quot;),
today() &gt; DATEVALUE(&quot;2022-06-24&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-07-01&quot;),
today() &gt; DATEVALUE(&quot;2022-07-01&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-08-01&quot;),
today() &gt; DATEVALUE(&quot;2022-08-01&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-09-05&quot;),
today() &gt; DATEVALUE(&quot;2022-09-05&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-09-30&quot;),
today() &gt; DATEVALUE(&quot;2022-09-30&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-10-10&quot;),
today() &gt; DATEVALUE(&quot;2022-10-10&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-11-11&quot;),
today() &gt; DATEVALUE(&quot;2022-11-11&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-12-26&quot;),
today() &gt; DATEVALUE(&quot;2022-12-26&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2022-12-27&quot;),
today() &gt; DATEVALUE(&quot;2022-12-27&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-01-02&quot;),
today() &gt; DATEVALUE(&quot;2023-01-02&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-02-20&quot;),
today() &gt; DATEVALUE(&quot;2023-02-20&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-04-07&quot;),
today() &gt; DATEVALUE(&quot;2023-04-07&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-04-10&quot;),
today() &gt; DATEVALUE(&quot;2023-04-10&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-05-22&quot;),
today() &gt; DATEVALUE(&quot;2023-05-22&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-07-03&quot;),
today() &gt; DATEVALUE(&quot;2023-07-03&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-08-07&quot;),
today() &gt; DATEVALUE(&quot;2023-08-07&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-09-04&quot;),
today() &gt; DATEVALUE(&quot;2023-09-04&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-10-02&quot;),
today() &gt; DATEVALUE(&quot;2023-10-02&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-10-09&quot;),
today() &gt; DATEVALUE(&quot;2023-10-09&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-11-13&quot;),
today() &gt; DATEVALUE(&quot;2023-11-13&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-12-25&quot;),
today() &gt; DATEVALUE(&quot;2023-12-25&quot;)),1,0)
-
IF(AND(DATEVALUE(Insolvency_Status_Last_Changed__c) &lt; DATEVALUE(&quot;2023-12-26&quot;),
today() &gt; DATEVALUE(&quot;2023-12-26&quot;)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Business Days in Current Status</inlineHelpText>
    <label>Number Of Days In Current Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>